# debian-codemods

./: .gitignore  Cargo.toml  Makefile  RELEASE.md  inquest.toml
debian-workspace/: Cargo.toml  TODO
debian-workspace/src/: action.rs  appliers.rs  fs_workspace.rs  lib.rs  package_class.rs  trigger.rs  workspace.rs
lintian-brush/: Cargo.toml  Makefile  README.md  build.rs  renamed-tags.json  spdx.json  tag-status.yaml
lintian-brush/examples/: builtin_fixer.rs
lintian-brush/src/: appliers.rs  builtin_fixers.rs  detector.rs  diagnostic.rs  fixer_tests.rs  lib.rs  lintian_overrides.rs  macros.rs  workspace.rs
lintian-brush/src/fixers/: README.md  ancient_maintscript_entry.rs  ancient_python_version_field.rs  apache2_module_does_not_depend_on_apache2_api.rs  aspell_package_not_arch_all.rs  autotools_pkg_config_macro_not_cross_compilation_safe.rs  binary_control_field_duplicates_source.rs  binary_package_depends_on_toolchain_package.rs  boilerplate_copyright_format_uri.rs  bugs_field_does_not_refer_to_debian_infrastructure.rs  build_depends_on_1_revision.rs  build_depends_on_build_essential.rs  build_depends_on_obsolete_package.rs  build_depends_on_python_sphinx_only.rs  built_using_for_golang.rs  capitalization_error_in_description.rs  changelog_has_duplicate_line.rs  chown_with_dot.rs  circular_installation_prerequisite.rs  comma_separated_files_in_dep5_copyright.rs  common_license.rs  control_file_contains_dh_make_vcs_comment.rs  copyright_continued_lines_with_space.rs  copyright_format_uri.rs  copyright_has_crs.rs  copyright_missing_upstream_info.rs  copyright_refers_to_compressed_license.rs  copyright_refers_to_deprecated_bsd_license_file.rs  copyright_refers_to_old_directory.rs  copyright_refers_to_symlink_license.rs  crlf_line_endings.rs  debcargo_collapse_features.rs  debhelper_but_no_misc_depends.rs  debhelper_compat_wrong_field.rs  debhelper_tools_from_autotools_dev_are_deprecated.rs  debian_changelog_file_contains_obsolete_user_emacs_settings.rs  debian_changelog_has_wrong_day_of_week.rs  debian_changelog_line_too_long.rs  debian_control_has_empty_field.rs  debian_control_has_obsolete_dbg_package.rs  (+170 more)
lintian-brush/tests/apache2-module-does-not-depend-on-apache2-api/creates-depends-field/: message
lintian-brush/tests/apache2-module-does-not-depend-on-apache2-api/simple/: message
lintian-brush/tests/aspell-package-not-arch-all/simple/: message
lintian-brush/tests/binary-package-depends-on-toolchain-package/simple/: message
lintian-brush/tests/boilerplate-copyright-format-uri/simple/: message
lintian-brush/tests/bugs-field-does-not-refer-to-debian-infrastructure/simple/: message
lintian-brush/tests/build-depends-on-1-revision/simple/: message
lintian-brush/tests/build-depends-on-python-sphinx-only/simple/: message
lintian-brush/tests/capitalization-error-in-description/multiple/: message
lintian-brush/tests/capitalization-error-in-description/simple/: message
lintian-brush/tests/control-file-contains-dh_make-vcs-comment/simple/: message
lintian-brush/tests/copyright-continued-lines-with-space/consistent-tabs/: message
lintian-brush/tests/copyright-refers-to-compressed-license/multiple/: message
lintian-brush/tests/copyright-refers-to-compressed-license/simple/: message
lintian-brush/tests/copyright-refers-to-deprecated-bsd-license-file/simple/: message
lintian-brush/tests/copyright-refers-to-old-directory/simple/: message
lintian-brush/tests/debcargo-collapse-features/missing/: message
lintian-brush/tests/debian-control-has-empty-field/simple/: message
lintian-brush/tests/debian-control-repeats-field-name-in-value/override/: message
lintian-brush/tests/debian-control-repeats-field-name-in-value/simple/: message
lintian-brush/tests/debian-files-list-in-source/simple/: message
lintian-brush/tests/debian-rules-uses-deb-build-opts/brace/: message
lintian-brush/tests/debian-upstream-obsolete-path/simple/: message
lintian-brush/tests/default-mta-dependency-does-not-specify-mail-transport-agent/build-depends/: message
lintian-brush/tests/default-mta-dependency-does-not-specify-mail-transport-agent/simple/: message
lintian-brush/tests/default-mta-dependency-not-listed-first/simple/: message
lintian-brush/tests/depends-on-old-emacs/simple/: message
lintian-brush/tests/depends-on-python-minimal/simple/: message
lintian-brush/tests/description-contains-tabs/extended-description/: message
lintian-brush/tests/description-contains-tabs/synopsis/: message
lintian-brush/tests/dh-installmanpages-is-obsolete/simple/: message
lintian-brush/tests/essential-no-not-needed/multiple/: message
lintian-brush/tests/essential-no-not-needed/simple/: message
lintian-brush/tests/homepage-field-uses-insecure-uri/debcargo/: message
lintian-brush/tests/homepage-for-cpan-package-contains-version/simple/: message
lintian-brush/tests/homepage-in-binary-package/binary-homepage-differs/: message
lintian-brush/tests/invalid-dep3-format-patch-wrong-last-update/simple/: message
lintian-brush/tests/needlessly-depends-on-awk/simple/: message
lintian-brush/tests/no-newline-at-end/control/: message
lintian-brush/tests/no-newline-at-end/rules/: message
lintian-brush/tests/no-section-field/inconsistent-binaries/: message
lintian-brush/tests/old-fsf-address-in-copyright-file/simple/: message
lintian-brush/tests/redundant-bugs-field/simple/: message
lintian-brush/tests/redundant-control-relation/build-depends/: message
lintian-brush/tests/redundant-control-relation/conflicts/: message
lintian-brush/tests/redundant-control-relation/exact-duplicate/: message
lintian-brush/tests/redundant-control-relation/multiple/: message
lintian-brush/tests/redundant-control-relation/simple/: message
lintian-brush/tests/redundant-origin-field/simple/: message
lintian-brush/tests/redundant-priority-optional-field/simple/: message
lintian-brush/tests/rules-requires-root-missing/redundant/: message
lintian-brush/tests/uses-dh-addons/gir/: message
multiarch-hints/: Cargo.toml
multiarch-hints/src/: lib.rs
(+127 files in other folders)
