[package]
name = "lintian-brush"
version = { workspace = true }
authors = ["Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Automatic lintian issue fixer"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/lintian-brush"
default-run = "lintian-brush"
include = [
	"spdx.json",
	"/src",
	"/tests",
	"build.rs",
	"README.md",
	"examples/*.rs",
	"spdx.json",
	"renamed-tags.json",
	"!*~",
]

[dependencies]
pyo3 = { workspace = true, features = ["serde", "chrono"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
configparser.workspace = true
clap = { workspace = true, features = [
	"derive",
	"env",
	"suggestions",
	"cargo",
	"string",
], optional = true }
lazy-regex = { workspace = true }
debversion = { workspace = true }
debian-copyright = { workspace = true }
debian-workspace = { workspace = true }
breezyshim = { workspace = true }
indicatif = ">=0.17,<0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"fmt",
	"env-filter",
	"ansi",
] }
tracing-log = "0.2"
nu-ansi-term = "0.50"
tempfile = { workspace = true }
url = { version = "2", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
lazy_static = { workspace = true }
debian-analyzer = { workspace = true, features = ["svp", "udd"] }
debian-control = { workspace = true }
deb822-lossless = { workspace = true }
distro-info = "0.4.0"
debian-changelog = { workspace = true }
desktop-edit = { workspace = true }
wait-timeout = "0.2.0"
svp-client = { workspace = true }
inventory = "0.3"
regex = { workspace = true }
indexmap = { workspace = true }
sequoia-openpgp = { version = "2", optional = true }
makefile-lossless = { workspace = true }
sha1 = "0.11"
shell-words = "1"
debian-watch = { workspace = true, features = ["discover", "blocking"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
upstream-ontologist = { workspace = true, optional = true }
dep3 = "0.2.0"
patchkit = "0.2.2"
rowan = "0.16"
lintian-overrides = { workspace = true }
strsim = "0.11"
futures = "0.3"
debbugs = { version = "0.1.8", features = ["blocking"], optional = true }
textwrap = "0.16"
toml_edit = { workspace = true }
systemd-unit-edit = { workspace = true }
yaml-edit = { workspace = true }

[dev-dependencies]
fs_extra = "1.3.0"
maplit = { workspace = true }

[features]
default = ["svp", "cli", "pgp", "bts", "upstream"]
svp = []
cli = ["dep:clap"]
udd = ["debian-analyzer/udd"]
# Fixers that read or write OpenPGP upstream signing keys.
pgp = ["dep:sequoia-openpgp", "debian-watch/pgp"]
# Fixers that query the Debian bug tracking system.
bts = ["dep:debbugs"]
# Fixers that use upstream-ontologist to guess upstream metadata and VCS URLs.
upstream = ["dep:upstream-ontologist"]

[[bin]]
name = "lintian-brush"
required-features = ["cli"]

[[bin]]
name = "find-old-info-format-tags"
required-features = ["udd"]

[[bin]]
name = "tag-status"
required-features = ["cli"]

[build-dependencies]
quote = "1.0.37"
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

[package.metadata.cargo-all-features]
max_combination_size = 2
